syntax = "proto3";

package rivet.backend.module;

import "proto/common.proto";

message Script {
	message Callable {

	}

	string name = 1;
	string request_schema = 2;
	string response_schema = 3;
	optional Callable callable = 4;
}

